2003-05-01  Kjartan Maraas  <set EMAIL_ADDRESS environment variable>

	* help-converters/man/gnome-man2html.c: (main): Fix for
	bug #73597. Patch from Roderich Schupp.
	* libgnome/gnome-config.c: (check_path): Use NULL in g_string_new()
	* libgnome/gnome-exec.c: (gnome_execute_shell_fds): Fix a typo in
	a comment.

2003-04-25  Alexander Larsson  <alexl@redhat.com>

        Patch by Frank Worsley <fworsley@shaw.ca>

	* libgnome/gnome-url.c: (gnome_url_show_with_env):
	now just calls gnome_vfs_show_url and wrap error codes in GErrors
	
	* libgnome/gnome-url.h:
	updated for new functions
	
	* schemas/desktop_gnome_url_handlers.schemas.in:
	cleaned up the url handler schemas. removed unneeded schemas and moved
	others into gnome-vfs

2003-04-14 Paul Duffy <dubhthach@frink.nuigalway.ie>

        * configure.in: Added ga (irish) to ALL_LINGUAS
       
2003-04-12  Arvind Samptur <arvind.samptur@wipro.com>
	* libgnome/gnome-exec.c: (gnome_execute_async_with_env_fds):
	waitpid() could fail due to a interrupted system call, loop till you
	succeed. #110100

	Reviewed by: Mark McLoughlin <mark@skynet.ie>

2003-04-11  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>

	*  libgnome/gnome-url.c (gnome_url_show_with_env): 
	Make sure url substitution takes place for customized web
	browser command. Fixes bug#108909.
	
	Reviewed by: Mark McLoughlin <mark@skynet.ie>
	
2003-03-27  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Releae 2.3.0

2003-03-26  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "yi" to ALL_LINGUAS.

2003-03-21  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "ml" in ALL_LINGUAS

2003-03-16  Andras Timar  <timar@gnome.hu>

	* help-converters/docbook/gnome-customization/l10n.xml:
        Added Hungarian translation.

2003-02-13  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Require intltool version that supports
	merging translations of .schemas files
	* doc/reference/Makefile.am: Removed extra '\'